--- a/challenges/nest-js/docker-compose.yml
+++ b/challenges/nest-js/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - .:/home/node/app
     ports:
       - 3000:3000
+    depends_on:
+      - db
 
   db:
     image: bitnami/mongodb:5.0.17
