--- a/challenges/nest-js/docker-compose.yml
+++ b/challenges/nest-js/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   app:
     build: .
-    command: npm run start:dev
     volumes:
       - .:/home/node/app
     ports:
@@ -12,7 +11,7 @@ services:
   db:
     image: bitnami/mongodb:5.0.17
     volumes:
-      - mongodb_data:/bitnami/mongodb
+      - mongodb:/bitnami/mongodb
     environment:
       MONGODB_ROOT_PASSWORD: root
       MONGODB_REPLICA_SET_MODE: primary
@@ -20,5 +19,4 @@ services:
       MONGODB_DATABASE: nest
 
 volumes:
-  mongodb_data:
-    driver: local
+  mongodb:
